fixing spacing
Former-commit-id: e8aa7069413d65964c25b22bb38aaa094887439b [formerly 0406e8d71dde55c8e9922486d83bd3a0f4e3c7c7] [formerly 2d83e5857e9826a4400eae61f7c9942bd41c4b3c [formerly 872834650aebe32db99a601081c9fc7ee1ac8568]]
Former-commit-id: 126ee05de2c16b1b2adf9b9efe536f1ff714c884 [formerly 5a20c174a302f3514938d79bcddf8e6a81b89961]
Former-commit-id: 40047ae964cf2f0ef7cb982e726b2d6387a23c7f

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -390,7 +390,7 @@ blockquote {
 /* @group Homepage */
 
 .homepage .entry {
-	margin-bottom:  inherit;
+	margin-bottom:  7em;
 }
 
 .homepage .postHeader h1 {
@@ -508,7 +508,7 @@ blockquote {
 
 .homepage .day .daybreak {
     margin-top: 5em;
-    margin-bottom:  5em;
+    margin-bottom:  7em;
     margin-left: -20%;
     border: 0;
     border-radius: 2px;
@@ -700,9 +700,9 @@ a.header-anchor:hover {
 .homepage .paginationFooter {
     display: block;
     width: 100%;
-    margin-top: 3em;
-    margin-bottom: 12em;
-    padding-top: 0em;
+    margin-top: 0em;
+    margin-bottom: 7em;
+    padding-top: 2em;
 }
 
 .homepage .paginationFooter .previousPage {
@@ -803,15 +803,15 @@ center.bottomAd {
 	}
 	
 	.homepage .day .daybreak {
-		margin-top: 4em;
-		margin-bottom: -1em;
+		margin-top: -2em;
+		margin-bottom: 2em;
 	    margin-left: -10%;
 		width: 120%;
 	}
 	
 	.homepage .paginationFooter {
-		margin-bottom: 6em;
-	    padding-top: 2em;
+		margin-bottom: -3em;
+	    padding-top: 3em;
 	}
 	
 	.navFooter {
